# awesome-nostr-relays

./: .gitattributes  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  badge.json  collections.json  health.json  lefthook.yml  nip66.json  relays.json  relays.toml  urls.json
.github/workflows/: build.yml  ci.yml  dead-relays.yml  health-check.yml  pages.yml  pr-lint.yml  publish.yml
api/: collections.json  relays.json  urls.json
crates/anr/: Cargo.toml
crates/anr/src/: lib.rs  main.rs  probe.rs
crates/anr/src/render/: markdown.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: health.rs  lib.rs  model.rs  probe_types.rs  source.rs  validate.rs
crates/core/src/render/: json.rs  markdown.rs  mod.rs  nip66.rs  schema.rs
crates/probe/: Cargo.toml
crates/probe/src/: lib.rs
crates/relays/: Cargo.toml
crates/relays/src/: health.rs  lib.rs  main.rs  model.rs  probe.rs  source.rs  validate.rs
crates/relays/src/render/: json.rs  markdown.rs
docs/: ARCHITECTURE.md
schema/: collection.schema.json  health-entry.schema.json  health-report.schema.json  relay.schema.json
src/: lib.rs  main.rs  model.rs  probe.rs  source.rs
src/render/: json.rs  markdown.rs  mod.rs
web/: index.html
