[package]
name = "relays"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[[bin]]
name = "relays"
path = "src/main.rs"

[dependencies]
relays-core.workspace = true
relays-probe.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
indicatif.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true
