[package]
name = "relays-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Async liveness probe for Nostr relays (WebSocket handshake + NIP-11 enrichment)"

[dependencies]
relays-core.workspace = true
futures.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true

[lints]
workspace = true
