[package]
name = "awesome-nostr-relays"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

# Library and binary share the internal name `relays` so downstream `use`
# paths and the `cargo run -- ...` / `cargo install awesome-nostr-relays`
# invocations stay ergonomic even though the published package name is
# namespaced.
[lib]
name = "relays"
path = "src/lib.rs"

[[bin]]
name = "relays"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
indicatif.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true
